--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -3,11 +3,13 @@ on:
   push
 
 jobs:
+
   job1:
     runs-on: ubuntu-latest
     steps:
+    - name: step0
+      uses: actions/checkout@v4
     - name: step1
       run: |
-        cd ../../
         git fetch 
         ./CMakeGCC.sh
