--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -11,5 +11,5 @@ jobs:
       uses: actions/checkout@v4
     - name: step1
       run: |
-        git fetch 
+        apt install libsdl2-dev libsdl2-ttf-dev
         ./CMakeGCC.sh
