Modif du workflow: ajout de lexécution 3

--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -13,4 +13,4 @@ jobs:
       run: |
         sudo apt install libsdl2-dev libsdl2-ttf-dev
         ./CMakeGCC.sh
-        ls ./bin/
+        ls ./bin/make/
