--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -13,5 +13,5 @@ jobs:
       run: |
         sudo apt install libsdl2-dev libsdl2-ttf-dev
         ./CMakeGCC.sh
-        cmake ./bin/make/Makefile 
+        cmake ./bin/make/
 
