--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -14,4 +14,6 @@ jobs:
         sudo apt install libsdl2-dev libsdl2-ttf-dev
         ./CMakeGCC.sh
         cmake ./bin/make/
+        ls ./Release
+        ./Release/Sobel
 
