--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -18,6 +18,8 @@ jobs:
         cd ./bin/make/
         make
     - name: step4
-      run: ./Release/sobel
+      run: |
+        find .
+        ./sobel
         
 
